# FastAPI_learning

./: .gitignore  pyproject.toml
auth/: auth.py  database.py  manager.py  schemas.py
migrations/: env.py
migrations/versions/: 2023-09-03_4b67c0c58d1d_initial.py  2023-09-04_322166a88ee4_.py  2023-09-05_da0f2ae14390_correction.py  9fc7a63f3c82_database_creation.py
models/: models.py
src/: database.py  main.py
src/auth/: manager.py  models.py
src/operations/: models.py  router.py
tests/: conftest.py  test_auth.py
trading_app/: main.py
